Agrego validaciones, mejoras y tests